--- a/templates/admin/article_form.html.twig
+++ b/templates/admin/article_form.html.twig
@@ -690,7 +690,7 @@
           {% if article.coverImage %}
             <div class="current-image">
               <span class="current-image-label">📷 Image actuelle :</span>
-              <img src="{{ asset('uploads/articles/' ~ article.coverImage) }}" alt="Cover actuelle">
+              <img src="{{ asset('uploads/blog/' ~ article.coverImage) }}" alt="Cover actuelle">
             </div>
           {% endif %}
         </div>
