--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -476,7 +476,7 @@
       </li>
 
       <li class="settings-item">
-        <a class="settings-link" href="">
+        <a class="settings-link" href="{{ path('legal_cgu') }}">
           <span class="settings-icon"><i class="fa-regular fa-file-lines"></i></span>
           <span class="settings-text">{{ 'settings.menu.terms_cgu'|trans }}</span>
           <i class="fa-solid fa-chevron-right settings-chevron" aria-hidden="true"></i>
@@ -484,7 +484,7 @@
       </li>
 
       <li class="settings-item">
-        <a class="settings-link" href="">
+        <a class="settings-link" href="{{ path('legal_cgv') }}">
           <span class="settings-icon"><i class="fa-regular fa-file-lines"></i></span>
           <span class="settings-text">{{ 'settings.menu.terms_cgv'|trans }}</span>
           <i class="fa-solid fa-chevron-right settings-chevron" aria-hidden="true"></i>
