--- a/templates/credential/index.html.twig
+++ b/templates/credential/index.html.twig
@@ -630,17 +630,27 @@
              placeholder="{{ 'credential.index.search.placeholder'|trans }}">
     </div>
 
-    {% if app.user.isSubscribed or credentials|length < 5 %}
-      <a href="{{ path('credential_new') }}" class="primary-btn-static">
-        <i class="fas fa-plus"></i>
-        <span>{{ 'credential.index.actions.add'|trans }}</span>
-      </a>
-    {% else %}
-      <div class="primary-btn-static btn-disabled" title="Passez à PRO pour créer plus de credentials">
-        <i class="fas fa-lock"></i>
-        <span>{{ 'credential.index.actions.add'|trans }}</span>
-      </div>
-    {% endif %}
+{% if app.user.isSubscribed or credentials|length < 5 %}
+  <a href="{{ path('credential_new') }}" class="primary-btn-static">
+    <i class="fas fa-plus"></i>
+    <span>{{ 'credential.index.actions.add'|trans }}</span>
+  </a>
+  
+  <a href="{{ path('credential_import') }}" class="primary-btn-static">
+    <i class="fas fa-file-import"></i>
+    <span>Import CSV</span>
+  </a>
+{% else %}
+  <div class="primary-btn-static btn-disabled" title="Passez à PRO pour créer plus de credentials">
+    <i class="fas fa-lock"></i>
+    <span>{{ 'credential.index.actions.add'|trans }}</span>
+  </div>
+  
+  <div class="primary-btn-static btn-disabled" title="Passez à PRO pour importer des credentials">
+    <i class="fas fa-lock"></i>
+    <span>Import CSV</span>
+  </div>
+{% endif %}
   </div>
 
   {# PRO Upgrade Banner - Affiché seulement si non abonné et a déjà 5 credentials #}
