--- a/templates/note/index.html.twig
+++ b/templates/note/index.html.twig
@@ -525,6 +525,7 @@
     .modal {
       border: none;
       border-radius: 16px;
+      margin:auto;
       padding: 0;
       width: min(700px, calc(100vw - 40px));
       box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
@@ -553,6 +554,7 @@
 
     .modal-title {
       font-size: 20px;
+      color: var(--color-text-dark);
       font-weight: 900;
       margin: 0;
     }
