--- a/templates/legal/cgu.html.twig
+++ b/templates/legal/cgu.html.twig
@@ -21,7 +21,7 @@
     <section class="legal">
       <h2>1. Objet</h2>
       <p>
-        Les présentes CGU encadrent l’accès et l’utilisation du service KeyNest (le « Service »).
+        Les présentes CGU encadrent l’accès et l’utilisation du service MYKEYNEST (le « Service »).
         En utilisant le Service, l’Utilisateur accepte les présentes CGU.
       </p>
 
@@ -50,7 +50,7 @@
       <p>
         Dans les limites autorisées par la loi applicable, le Service est fourni « en l’état »,
         sans garantie d’absence d’erreurs, d’interruption ou d’invulnérabilité.
-        KeyNest ne saurait être tenu responsable des dommages indirects, pertes de données, pertes financières,
+        MYKEYNEST ne saurait être tenu responsable des dommages indirects, pertes de données, pertes financières,
         pertes d’exploitation, ou préjudices résultant de l’utilisation ou de l’impossibilité d’utiliser le Service.
       </p>
 
