--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -415,6 +415,9 @@ body {
         <p class="auth-hint">
           {{ 'auth.login.form.hint'|trans }}
           <a href="/register">{{ 'auth.login.form.hint_link'|trans }}</a>
+          <br>
+          <br>
+          <a href="/reset-password">{{ 'auth.login.form.hint_link1'|trans }}</a>
         </p>
       </form>
 
