--- a/templates/base_auth.html.twig
+++ b/templates/base_auth.html.twig
@@ -87,5 +87,6 @@
 {% endif %}
 
     {% block body %}{% endblock %}
+        {% include './components/parts/_toasts.html.twig' %}
   </body>
 </html>
